--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,34 @@ div#truck-blocks div.active img{
 li.active{
 	font-weight: bold;
 }
+.truck-seria img{
+	-ms-transform: scale(0.8); 
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    -webkit-transition: all 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: all 0.5s;
+}
+.truck-seria.active img{
+	-ms-transform: scale(0.95); 
+    -webkit-transform: scale(0.95);
+    transform: scale(0.95);
+}
+.truck-seria div{
+	height: 210px;
+	background: white;
+	border: 1px solid #555;	
+}
+.truck-seria.active div{
+	border-color: #2184be;
+  	-moz-box-shadow:    0px 0px 5px 0px #2184be;
+  	-webkit-box-shadow: 0px 0px 5px 0px #2184be;
+  	box-shadow:         0px 0px 5px 0px #2184be;
+}
+.no-select{
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;	
+}
