--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ div#truck-blocks img:hover{
 	opacity: 1;
 	border-color: #BBB;
 }
-div#truck-blocks div.active img,.truck-seria.active div{
+div#truck-blocks div.active img,.truck-seria.active >div:first-child{
 	border-color: #2184be;
     -moz-box-shadow:    0px 0px 5px 0px #2184be;
     -webkit-box-shadow: 0px 0px 5px 0px #2184be;
@@ -48,10 +48,14 @@ li.active{
     -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
-.truck-seria div{
-	height: 210px;
-	background: white;
-	border: 1px solid #555;	
+.truck-seria > div:first-child{
+    height: 210px;
+    background: white;
+    border: 1px solid #555;
+}
+.truck-seria > label{
+    display: block!important;
+    text-align: center;
 }
 .no-select{
     -webkit-touch-callout: none;
@@ -61,3 +65,13 @@ li.active{
 	-ms-user-select: none;
 	user-select: none;	
 }
+#truck-blocks > div > label{
+    display: block;
+}
+/*.wizard > .content > .body .radio.inline.control-label{*/
+    /*margin-right: 10px;*/
+/*}*/
+/*.wizard > .content > .body .radio.inline.control-label input{*/
+    /*display: inline;*/
+    /*border: none;*/
+/*}*/
