--- a/css/main.css
+++ b/css/main.css
@@ -28,15 +28,17 @@ div#truck-blocks img:hover{
 }
 div#truck-blocks div.active img,.truck-seria.active >div:first-child{
 	border-color: #2184be;
-    -moz-box-shadow:    0px 0px 5px 0px #2184be;
-    -webkit-box-shadow: 0px 0px 5px 0px #2184be;
-    box-shadow:         0px 0px 5px 0px #2184be;
+
+    -moz-box-shadow:    0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow:         0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
     opacity: 1;
 }
 li.active{
 	font-weight: bold;
 }
 .truck-seria img{
+    cursor: pointer;
 	-ms-transform: scale(0.8); 
     -webkit-transform: scale(0.8);
     transform: scale(0.8);
@@ -75,3 +77,10 @@ li.active{
     /*display: inline;*/
     /*border: none;*/
 /*}*/
+ul.nested{
+    font-weight: italic;
+}
+ul.nested li{
+    margin-left:20px;
+    list-style-type:circle!important;
+}
